[tool.poetry]
name = "learn-poetry"
version = "0.1.0"
description = ""
authors = ["Shaw Innes <shaw@immortal.net.au>"]

[tool.poetry.dependencies]
python = "^3.9"
geopandas = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
